minor css fix for img alignment

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -29,6 +29,14 @@ body {
 	margin-right: 1rem;
 }
 
+.wp-block-cover.has-background-dim.alignleft{
+	margin-right: 1rem !important;
+}
+
+.wp-caption.alignleft{
+	margin-right: 1rem !important;
+}
+
 /*
 Sticky button is experimental, only use it on the front for screens above 782px width.
 */
